--- a/CarRental/CarRental.csproj
+++ b/CarRental/CarRental.csproj
@@ -8,7 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <AdditionalFiles Include="stylecop.json" Link="stylecop.json" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
+        <PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.556">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
